--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <header class="loop__studios">
             <section class="loop__heads">
                 <img class="loop__logo" src="./assets/images/logo.svg" alt="">
-                <button type="button" class="loop__button--open "> <!-- display__none  -->
+                <button type="button" class="loop__button--open " aria-label="Open menú de navegatión">
                     <img class="loop__icon--open" src="./assets/images/icon-hamburger.svg" alt="">
                 </button>
                     <nav class="loop__navs display__none "> <!-- --> 
                     <section class="loop__mobile "> 
                         <img class="loop__logo loop__logo--nav" src="./assets/images/logo.svg" alt="">
-                        <button type="button" class="loop__button--close "> <!-- display__none  -->
+                        <button type="button" class="loop__button--close" aria-label="Close menú of navegatión"> 
                             <img class="loop__icon--close" src="./assets/images/icon-close.svg" alt="">
                         </button>
                     </section>
@@ -47,7 +47,7 @@
                     </ul>
                 </nav>
             </section>
-            <section class="loop__header">
+            <section class="loop__header" role="region" aria-labelledby="main-heading">
                 <h1 class="loop__title">Immersive experiences that deliver </h1>
             </section>
         </header>
@@ -166,22 +166,22 @@
             <section class="footer__social">
                 <ul class="social">
                     <li class="social__item">
-                        <a class="social__link" href="#">
+                        <a class="social__link" href="#" aria-label="Facebook">
                             <img class="social__icon" src="./assets/images/icon-facebook.svg" alt="">
                         </a>
                     </li>
                     <li class="social__item">
-                        <a class="social__link" href="#">
+                        <a class="social__link" href="#" aria-label="Facebook">
                             <img class="social__icon" src="./assets/images/icon-twitter.svg" alt="">
                         </a>
                     </li>
                     <li class="social__item">
-                        <a class="social__link" href="#">
+                        <a class="social__link" href="#" aria-label="Pinterst">
                             <img class="social__icon" src="./assets/images/icon-pinterest.svg" alt="">
                         </a>
                     </li>
                     <li class="social__item">
-                        <a class="social__link" href="#">
+                        <a class="social__link" href="#" aria-label="Instagram">
                             <img class="social__icon" src="./assets/images/icon-instagram.svg" alt="">
                         </a>
                     </li>
