--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </ul>
                 </nav>
             </section>
-            <section class="loop__header" role="region" aria-labelledby="main-heading">
+            <section class="loop__header"  aria-labelledby="main-heading">
                 <h1 class="loop__title">Immersive experiences that deliver </h1>
             </section>
         </header>
