--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="loop__navs--bg display__none "></div>
     <section class="loop">
-        <header class="loop__studios">
+        <header class="loop__studios" aria-labelledby="main-heading" role="banner">
             <section class="loop__heads">
                 <img class="loop__logo" src="./assets/images/logo.svg" alt="">
                 <button type="button" class="loop__button--open " aria-label="Open menú de navegatión">
